--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,20 @@
 <resources>
     <string name="app_name">QuizApp</string>
+    <string name="strPrize1">$100</string>
+    <string name="strPrize2">$50 000</string>
+    <string name="strPrize3">$75 000</string>
+    <string name="strPrize4">$100 000</string>
+    <string name="strPrize8">$600 000</string>
+    <string name="strPrize9">$800 000</string>
+    <string name="strPrize10">$1 000 000</string>
+    <string name="strPrize5">$200 000</string>
+    <string name="strPrize6">$300 000</string>
+    <string name="strPrize7">$400 000</string>
+    <string name="strQuestion">Question</string>
+    <string name="strScore">0/10</string>
+    <string name="strTime">Time Remaining</string>
+    <string name="strAnswer1">TextView</string>
+    <string name="strAnswer2">TextView</string>
+    <string name="strAnswer3">TextView</string>
+    <string name="strAnswer4">TextView</string>
 </resources>
